[gd_scene load_steps=2 format=3 uid="uid://b5xg56jie47su"]

[ext_resource type="Script" uid="uid://dhptlx8b4gbof" path="res://scripts/Main.gd" id="1_o5qli"]

[node name="Main" type="Node2D"]
script = ExtResource("1_o5qli")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 10.0
offset_top = 35.0
offset_right = 108.0
offset_bottom = 133.0
scale = Vector2(5, 5)
columns = 3

[node name="0" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 16

[node name="1" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="2" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="3" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="4" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="5" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="6" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="7" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="8" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="."]
offset_left = 6.0
offset_top = 3.0
offset_right = 483.0
offset_bottom = 35.0

[node name="HostButton" type="Button" parent="."]
offset_left = 43.0
offset_top = 100.0
offset_right = 137.0
offset_bottom = 131.0
text = "CrearJuego"

[node name="JoinButton" type="Button" parent="."]
offset_left = 44.0
offset_top = 257.0
offset_right = 118.0
offset_bottom = 288.0
text = "Unirme"

[node name="IPAddress" type="LineEdit" parent="."]
offset_left = 151.0
offset_top = 260.0
offset_right = 325.0
offset_bottom = 291.0
placeholder_text = "ej. 127.0.0.1"

[node name="ResultLabel" type="Label" parent="."]
offset_left = 12.0
offset_top = 224.0
offset_right = 501.0
offset_bottom = 331.0
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pressed" from="GridContainer/0" to="." method="_on_CellButton_pressed" binds= [0]]
[connection signal="pressed" from="GridContainer/1" to="." method="_on_CellButton_pressed" binds= [1]]
[connection signal="pressed" from="GridContainer/2" to="." method="_on_CellButton_pressed" binds= [2]]
[connection signal="pressed" from="GridContainer/3" to="." method="_on_CellButton_pressed" binds= [3]]
[connection signal="pressed" from="GridContainer/4" to="." method="_on_CellButton_pressed" binds= [4]]
[connection signal="pressed" from="GridContainer/5" to="." method="_on_CellButton_pressed" binds= [5]]
[connection signal="pressed" from="GridContainer/6" to="." method="_on_CellButton_pressed" binds= [6]]
[connection signal="pressed" from="GridContainer/7" to="." method="_on_CellButton_pressed" binds= [7]]
[connection signal="pressed" from="GridContainer/8" to="." method="_on_CellButton_pressed" binds= [8]]
[connection signal="pressed" from="HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
